# ionyx-cli

./: .gitignore  .npmignore  LICENSE  README.md  package-lock.json  package.json
.github/workflows/: release.yml
cargo-ionyx/: Cargo.toml
cargo-ionyx/src/: main.rs
cargo-ionyx/src/commands/: dev.rs
ionyx-cli/: Cargo.toml  out.txt
ionyx-cli/my-ionyx-test/: README.md  index.html  ionyx.config.json  package-lock.json  package.json  vite.config.ts
ionyx-cli/my-ionyx-test/frontend/: App.tsx  index.css
ionyx-cli/my-ionyx-test/src-ionyx/: Cargo.toml
ionyx-cli/my-ionyx-test/src-ionyx/app-data/: test.txt
ionyx-cli/src/: main.rs
ionyx-cli/src/commands/: build.rs  bundle.rs  config.rs  create.rs  dev.rs  doctor.rs  info.rs  mod.rs  plugin.rs  run.rs
ionyx-cli/src/config/: mod.rs
ionyx-cli/src/templates/: mod.rs
ionyx-cli/src/templates/basic/: index.html  ionyx.config.json  package-lock.json  package.json
ionyx-cli/src/templates/basic/src/: App.css  App.tsx
ionyx-cli/src/templates/basic/src-ionyx/: ionyx.config.toml
ionyx-cli/src/templates/leptos/: Cargo.toml  README.md  index.html  ionyx.config.json  package.json
ionyx-cli/src/templates/leptos/frontend/: lib.rs
ionyx-cli/src/templates/leptos/frontend/src/: lib.rs
ionyx-cli/src/templates/leptos/src-ionyx/: main.rs
ionyx-cli/src/templates/react/: README.md  index.html  package-lock.json  package.json  tsconfig.json
ionyx-cli/src/templates/react/frontend/: App.tsx  tsconfig.json
ionyx-cli/src/templates/react/frontend/src/types/: ionyx.d.ts
ionyx-cli/src/templates/react/src/: App.css  App.tsx  main.tsx
ionyx-cli/src/templates/react/src-ionyx/: Cargo.toml  main.rs
ionyx-cli/src/templates/src-ionyx/: Cargo.toml  ionyx.js
ionyx-cli/src/templates/svelte/: README.md  index.html  package.json  tsconfig.json  vite.config.ts
ionyx-cli/src/templates/svelte/frontend/: index.html
ionyx-cli/src/templates/svelte/frontend/src/: App.svelte  global.d.ts  tsconfig.json
ionyx-cli/src/templates/svelte/src/: App.svelte  main.ts
ionyx-cli/src/templates/svelte/src-ionyx/: Cargo.toml  main.rs
ionyx-cli/src/templates/vanilla/: README.md  index.html  ionyx.config.json  package.json  vite.config.ts
ionyx-cli/src/templates/vanilla/frontend/: main.js
ionyx-cli/src/templates/vanilla/src/: main.js
ionyx-cli/src/templates/vanilla/src-ionyx/: Cargo.toml  config.rs  ipc_bridge.rs  lib.rs  main.rs  protocol.rs
ionyx-cli/src/templates/vue/: README.md  package.json  tsconfig.json  vite.config.ts
ionyx-cli/src/templates/vue/frontend/: App.vue  main.ts
ionyx-cli/src/templates/vue/src/: App.vue  style.css
ionyx-cli/src/templates/vue/src-ionyx/: bridge.rs  security.rs  window.rs
