[package]
name = "ionyx-cli"
version = "0.1.0"
edition = "2021"
description = "Ionyx Framework CLI Tool"
authors = ["Ionyx Team"]
license = "MIT"
repository = "https://github.com/ionyx-framework/ionyx-cli"

[[bin]]
name = "ionyx"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
colored = "2.0"
dirs = "5.0"
handlebars = "4.5"
zip = "0.6"
reqwest = { version = "0.11", features = ["json"] }
futures = "0.3"
include_dir = "0.7"
dialoguer = "0.11"
os_info = "3.8"
[workspace]
exclude = [
    "src/templates/basic/src-ionyx",
    "src/templates/leptos",
    "src/templates/leptos/src-ionyx",
    "src/templates/react/src-ionyx",
    "src/templates/src-ionyx",
    "src/templates/svelte/src-ionyx",
    "src/templates/vanilla/src-ionyx",
    "src/templates/vue/src-ionyx"
]
