[workspace]
members = [
    "src-ionyx",
    "frontend",
]

resolver = "2"

[workspace.dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tao = "0.28"
wry = "0.44"
include_dir = "0.7"
webbrowser = "1.0"
os_info = "3.8"
gethostname = "0.5"
reqwest = { version = "0.12", features = ["json"] }
base64 = "0.22"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
