[package]
name = "ionyx-host"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ionyx-host"
path = "main.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tao = "0.34.6"
wry = "0.54.2"
include_dir = "0.7"
webbrowser = "1.0"
os_info = "3.8"
gethostname = "0.5"
reqwest = { version = "0.12", features = ["json"] }
base64 = "0.22"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = { version = "0.4", features = ["serde"] }
toml = "0.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"